# tuktuk-gpt-oracle

./: .gitignore  Anchor.toml  Cargo.toml  package.json
programs/tuktuk-gpt-oracle/: Cargo.toml
programs/tuktuk-gpt-oracle/src/: lib.rs  state.rs
programs/tuktuk-gpt-oracle/src/instructions/: agent.rs  callback.rs  initialize.rs  mod.rs
tests/: tuktuk-gpt-oracle.ts
