[package]
name = "tuktuk-gpt-oracle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tuktuk_gpt_oracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
ephemeral-rollups-sdk = "0.8.0"  # Lock to stable Solana v2 compatibility
solana-gpt-oracle = "=0.1.0"      # Force Cargo to compile EXACTLY v0.1.0